Update ka_inst_man.rst